RESOLVED FIXED308952
Changing the playback speed on a video stops audio playback on various websites
https://bugs.webkit.org/show_bug.cgi?id=308952
Summary Changing the playback speed on a video stops audio playback on various websites
Jean-Yves Avenard [:jya]
Reported 2026-03-01 23:06:40 PST
When the user changes the playbacks speed on a YouTube video, the audio stops playing. Affected Websites: youtube.com netflix.com reddit.com theguardian.com facebook.com nfl.com linkedin.com STR: 1. Launch Safari 2. Navigate to YouTube.com 3. Click any video 4. Start playing the video 5. Tap the gear icon in the video’s media UI 6. Playback > change the playback speed Results: video no longer has audio playing, despite the video now playing at the new playback speed. rdar://171009710
Attachments
Jean-Yves Avenard [:jya]
Comment 1 2026-03-01 23:14:22 PST
EWS
Comment 2 2026-03-02 17:47:20 PST
Committed 308499@main (6dcdded8b68c): <https://commits.webkit.org/308499@main> Reviewed commits have been landed. Closing PR #59694 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.