Cherry-pick 308499@main (6dcdded8b68c). rdar://172689607

Changing the playback speed on a video stops audio playback on various websites
    https://bugs.webkit.org/show_bug.cgi?id=308952
    rdar://171009710

    Reviewed by Jer Noble.

    The RemoteAudioVideoRendererProxyManager didn't set the callback to be
    notified by the AudioVideoRendererAVFObjC that the AVSampleBufferAudioRenderer
    required the audio renderer to be flushed and all content re-enqueued.
    When the playback rate of the AVSampleBufferRenderSynchronizer was changed
    it caused the AudioVideoRendererAVFObjC to fire a AVSampleBufferAudioRendererWasFlushedAutomaticallyNotification
    in the GPUP. That information wasn't passed on the web content process.

    Test: media/media-source/media-managedmse-audible-setrate.html

    * LayoutTests/media/media-source/media-managedmse-audible-setrate-expected.txt: Added.
    * LayoutTests/media/media-source/media-managedmse-audible-setrate.html: Added. Test is non functional as
    as far as the JS audio element is concerned, there was audio playing even if it wasn't actually audible.
    But running it in Safari/MiniBrowser it would expose the problem immediately.
    * LayoutTests/platform/glib/media/media-source/media-managedmse-audible-setrate-expected.txt: Added. GStreamer based players properly support WebAudio's mediaElementSource
    * Source/WebKit/GPUProcess/media/RemoteAudioVideoRendererProxyManager.cpp:
    (WebKit::RemoteAudioVideoRendererProxyManager::addTrack):

    Canonical link: https://commits.webkit.org/308499@main

Identifier: 305413.550@safari-7624-branch